--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="seguro">
                
                 <h3>Basico</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eos, nemo nulla enim dolorem modi architecto illo, quas porro sapiente quod non dolor doloremque tempore qui eligendi odio voluptates aspernatur?
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam ratione deserunt, optio voluptas nisi ea iure maiores repudiandae quisquam magni!
                 </p>
             </div>
             <div class="seguro">
