On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   README.md
	modified:   css/estilos.css
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
             <form class="formulario-encabezado">
                 <h2>Asesorate con nosotros</h2>
                 <div class="boton-encabezado">
-                    <a href="#contacto">
-                        <input class="btn azul" type="submit" value="Cotizar">
-                    </a>
+                    <a href="#contacto" class="btn azul">Cotizar</a>
                 </div>
 
             </form>
@@ -129,7 +127,7 @@
         <div class="logo">
             <h2>Seguro <span>No Pagamos</span></h2>
         </div>
-        <p>Todos los derechos reservados &copy; Desarollado por Grupo H</p>
+        <p>Todos los derechos reservados &copy; Desarrollado por Grupo H</p>
     </footer>
     <script src="js/app.js"></script>
 </body>
